--- a/Thesis.tex
+++ b/Thesis.tex
@@ -60,25 +60,41 @@
 % Remove hyphen word split
 % \hyphenpenalty=10000
 
+% No number in part pages
+\makeatletter
+\renewcommand\part{%
+  \if@openright
+    \cleardoublepage
+  \else
+    \clearpage
+  \fi
+  \thispagestyle{empty}%   % Original »plain« replaced by »emptyx
+  \if@twocolumn
+    \onecolumn
+    \@tempswatrue
+  \else
+    \@tempswafalse
+  \fi
+  \null\vfil
+  \secdef\@part\@spart}
+\makeatother
+
+
 %% ----------------- START OF THE DOCUMENT ---------------------------------------------------------
 \begin{document}
-
-
-
-\frontmatter	           % Begin Roman style (i, ii, iii, iv...) page numbering
 
 % ------------------ Set up the Title Page ---------------------------------------------------------
 \include{portada}       %we use the title page document
 
 
-\setstretch{1.3}        % It is better to have smaller font and larger line spacing than the other way round
+\setstretch{1.5}        % It is better to have smaller font and larger line spacing than the other way round
 
 
 % --------- Define the page headers using the FancyHdr package and set up for one-sided printing
 
 \fancyhead{}        % Clears all page headers and footers
 \rhead{\thepage}    % Sets the right side header to show the page number
-\lhead{}            % Clears the left side page header
+\lhead{\thepage}    % Sets the left side header to show the page number
 \pagestyle{fancy}   % Finally, use the "fancy" page style to implement the FancyHdr headers
 \clearpage          % Declaration ended, now start a new page
 
@@ -104,18 +120,6 @@
 \clearpage  % Funny Quote page ended, start a new page
 % ----------------------------------------------------------------
 
-% ------------------ The Abstract Page -------------------------------------------------------------
-%\addtotoc{Abstract}  % Add the "Abstract" page entry to the Contents
-%\abstract{
-%\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
-%
-%The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
-%
-%}
-%
-%\clearpage  % Abstract ended, start a new page
-%%% ----------------------------------------------------------------
-
 % Meto una pagina en blanco
 \pagestyle{empty}  % No headers or footers for the following pages
 
@@ -124,82 +128,39 @@
 \vfill\vfill\vfill\vfill\vfill\vfill\null
 \clearpage  % Empty page ended, start a new page
 
-\setstretch{1.3}  % Reset the line-spacing to 1.3 for body text (if it has changed)
-
-% ------------------ The Acknowledgements page, for thanking everyone ------------------------------
-\acknowledgements{
-\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
-
-~\\
-
-Ha llegado el momento de poner fin a esta Tesis y a esta época de mi vida. Han sido cuatro años de duro trabajo cuyo resultado queda materializado en las páginas que vienen a continuación. No podría dejar de lado esta oportunidad irrepetible para recordar y agradecer a todos los que han estado conmigo durante estos años y que, con su apoyo, amistad y amor, han hecho que esta Tesis sea posible.
-
-Miguel y Predes, vosotros sois (¿Cómo no?) los primeros de esta lista. Habéis sido los mejores padres con los que un hijo podría soñar. Los primeros en creer en mí y estar a mi lado, hoy soy la persona que soy gracias al amor, cariño y educación que me habéis dado. Aunque inicialmente os di un disgusto cuando quise dejar a medias la carrera de ingeniería aeroespacial (arriesgando un futuro posiblemente más estable) para estudiar física, a la hora de la verdad pudisteis comprenderme y apoyarme en mi decisión. Os doy las gracias por ser tan maravillosas personas, tengo mucha suerte de ser vuestro hijo. Tampoco puedo olvidarme de mis abuelas Francisca (Frasquita) y Predes, y de mis abuelos Gabriel y Francisco, que hicieron de padres cuando estos no podían y que tantos caprichos me dieron de pequeño.
-
-A mis supervisores, Gonzalo y Marisa, os quiero dar las gracias por darme esta gran oportunidad y creer también en mí. No solo he aprendido muchas cosas de vosotros y me habéis proporcionado los medios necesarios para completar mi doctorado, sino que, sobre todo, habéis demostrado una calidad humana envidiable y que ha hecho posible que este doctorado haya sido una experiencia realmente positiva.
-
-A mis compañeros del grupo QuInST, Sofía, Mikel y Ander (y al quinto miembro ocasional y jugador de Rugby, Aitor), os doy las gracias por la camaradería y el día a día tras las trincheras. I would also like to thank Anthony Kiely, who was also part of this team for a year, for being such a nice colleague. A los estudiantes de máster con los que he trabajado, Aitor Alaña y Álvaro Buendía, os deseo lo mejor en vuestra vida y carrera científica.
-
-I would also like to thank the collaborators I worked with during this years. Andreas Ruschhaupt in Ireland, Ali Mostafazadeh in Turkey, Dario Poletti in Singapore, and Antonia Ruiz in Tenerife. Special thanks to Dario Poletti for giving me the opportunity of working in his team for 3 months, although in the end I could not join them because of the pandemic. A Dani Alonso, Antonia Ruiz y Jose Pascual Palao les tengo que dar las gracias por su amabilidad y hospitalidad durante mi estancia en Tenerife.
-
-Este párrafo os lo dedico a vosotros, Adrián y Ornella. Además de ser mis compañeros de piso durante tantos años también puedo decir que sois los mejores amigos que he hecho en Bilbao. Aunque nuestros caminos se separan, lo que Irala ha unido no lo podrá romper la distancia. Grazie Orne per essere una sorella così brava, buona fortuna in Edimburgo. Adri, sigue metiendo mates, surfeando olas y haciendo música allí donde vayas (y nada de hablar de física a partir de las 22.00).
-
-En Bilbao he conocido gente maravillosa a la que tengo la suerte de poder llamar amigos. Seguramente me deje gente, pero quiero mandar un abrazo fuerte al duo de bajistas/contrabajistas Iñaki e Itxaso, Nerea (Espero que nunca dejen de interesarte los quarks), Lizzie, Álvaro, Rodrigo, Jesús, Sebas (el maestro del asado) y Federica.
-
-Ahora solo faltas tú, Cecilia. Indiscutiblemente has sido la persona más importante para mí durante esta época. Tú eres la responsable de que este último año, que podría haber sido uno de los peores, sea en realidad uno de los más especiales que he vivido.  Y es que, a pesar de esta pandemia, hemos vivido muchas cosas bonitas juntos durante el 2020. Además, sin ti al lado el tele-trabajo habría sido insoportable y no habría acabado a tiempo esta Tesis sin tu apoyo moral. Espero que lo que nos depare el futuro sea más brillante que lo que hemos vivido recientemente, aunque sin duda, estando juntos todo será mucho más fácil. Estoy deseando ver que aventuras viviremos. Un beso.
-
-Lo volveré a repetir para que quede perfectamente claro:
-\begin{center}
-  GRACIAS A TODOS.
-\end{center}
-
-~\\
-\it{Esta Tesis ha sido financiada a trav\'es de una beca predoctoral concedida por el Gobierno Vasco/Eusko Jaurlaritza}
-}
-
-\clearpage  % End of the Acknowledgements
-%% ----------------------------------------------------------------
-
-\pagestyle{fancy}  %The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
-
-
 %% ----------------------------------------------------------------
 \lhead{\emph{Contents}}  % Set the left side page header to "Contents"
 \tableofcontents  % Write out the Table of Contents
+\addtocontents{toc}{\protect\thispagestyle{empty}}
+\pagenumbering{gobble}
 
-%% ----------------------------------------------------------------
-\lhead{\emph{List of Figures}}  % Set the left side page header to "List if Figures"
-\listoffigures  % Write out the List of Figures
 
-%%% ----------------------------------------------------------------
-%\lhead{\emph{List of Tables}}  % Set the left side page header to "List of Tables"
-%\listoftables  % Write out the List of Tables
 
-%% ----------------------------------------------------------------
-\setstretch{1.5}  % Set the line spacing to 1.5, this makes the following tables easier to read
-\clearpage  % Start a new page
+\pagestyle{fancy}  %The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
 
-% %% Begin the Dedication page
-% \setstretch{1.3}  % Return the line spacing back to 1.3
-% \pagestyle{empty}  % Page style needs to be empty for this page
-% \dedicatory{dedicatory here}
+\frontmatter	           % Begin Roman style (i, ii, iii, iv...) page numbering
 
-\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+% ------------------ The Acknowledgements, for thanking everyone -----------------------------------
+% \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+\input{./Chapters/agradecimientos}
+
+% ------------------ The Abstract (spanish) --------------------------------------------------------
+% \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+\input{./Chapters/resumen}
+
+% ------------------ The List of Publications ------------------------------------------------------
+% \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 \input{Publications}
-
-%% ----------------------------------------------------------------
-\mainmatter	       % Begin normal, numeric (1,2,3...) page numbering
-\pagestyle{fancy}  % Return the page headers back to the "fancy" style
 
 % --------------------------------------------------------------------------------------------------
 % ------------------ Include the chapters of the thesis, as separate files -------------------------
 % --------------------------------------------------------------------------------------------------
 
-\addtocontents{toc}{\vspace{0.6em}}
+\addtocontents{toc}{\vspace{2.0em}}
 
+\mainmatter	       % Begin normal, numeric (1,2,3...) page numbering
+\pagestyle{fancy}  % Return the page headers back to the "fancy" style
 % ------------ INTRODUCTION ------------------------------------------------------------------------
-\part*{Introduction}
-\addcontentsline{toc}{part}{Introduction}
 \input{./Chapters/Introduction} %Introduction
 
 % ------------ PART I: NH-Devices ------------------------------------------------------------------
@@ -215,19 +176,18 @@ Lo volveré a repetir para que quede perfectamente claro:
 \input{./Chapters/Chapter5}    % Heat Rectification in graded chains of trapped ions
 \input{./Chapters/Chapter6}    % Rectification in a minimal model
 
+\addtocontents{toc}{\vspace{2.0em}}
 % ------------ CONCLUSIONS -------------------------------------------------------------------------
-\part*{Conclusions\label{partConclusions}}
-\addcontentsline{toc}{part}{Conclusions}
 \input{./Chapters/Conclusions} %Conclusions
 
 
 % ------------ APPENDICES --------------------------------------------------------------------------
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aestheticsy
 
-\appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 \part*{Appendices}
 \addcontentsline{toc}{part}{Appendices}
-\addtocontents{toc}{\vspace{0.6em}}
+
+\appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 
 %Properties of separable potentials
 \input{./Appendices/Appendix_SeparablePotentials}
@@ -242,9 +202,9 @@ Lo volveré a repetir para que quede perfectamente claro:
 \input{./Appendices/Appendix_SpectralDensity}
 
 
-\addtocontents{toc}{\vspace{0.6em}}  % Add a gap in the Contents, for aesthetics
+\addtocontents{toc}{\vspace{2.0em}}  % Add a gap in the Contents, for aesthetics
 \backmatter
-\pagestyle{empty}  % Page style needs to be empty for this page
+% \pagestyle{empty}  % Page style needs to be empty for this page
 
 % ------------------ BIBLIOGRAPHY ----------------------------------------------------------------
 \label{Bibliography}
