Fixed the appendices numbering

--- a/Appendices/Appendix_NumericalCalculationOfTandR.tex
+++ b/Appendices/Appendix_NumericalCalculationOfTandR.tex
@@ -2,7 +2,7 @@
 
 \chapter{Numerical calculation of transmission and reflection coefficients}
 \label{Appendix:NumericalCalculationOfTandR}
-\lhead{Appendix D. \emph{Numerical calculation of transmission and reflection coefficients}}
+\lhead{Appendix B. \emph{Numerical calculation of transmission and reflection...}}
 
 %
 
