--- a/Appendices/Appendix_SeparablePotentials.tex
+++ b/Appendices/Appendix_SeparablePotentials.tex
@@ -2,7 +2,7 @@
 
 \chapter{Properties of separable potentials}
 \label{Appendix:SeparablePotentials}
-\lhead{Appendix C. \emph{Properties of separable potentials}}
+\lhead{Appendix A. \emph{Properties of separable potentials}}
 
 \section{Transition operator}
 \label{Appendix:SeparablePotentials_TransitionOperator}
