--- a/Appendices/Appendix_SpectralDensity.tex
+++ b/Appendices/Appendix_SpectralDensity.tex
@@ -2,7 +2,7 @@
 
 \chapter{Complete expressions for the Spectral Density Matrix}
 \label{Appendix:SpectralDensity}
-\lhead{Appendix F. \emph{Complete expressions for the Spectral Density Matrix}}
+\lhead{Appendix D. \emph{Complete expressions for the Spectral Density Matrix}}
 
 %
 In section \ref{sec:lookingForR} we used the characteristic polynomial $P_{\mathbb{A}}(\lambda)$ of the dynamical matrix $\mathbb{A}$ for the calculation of the spectral density matrix. $P_{\mathbb{A}}(\lambda)$ is defined as
