--- a/Appendices/Appendix_SteadyStateEquations.tex
+++ b/Appendices/Appendix_SteadyStateEquations.tex
@@ -2,7 +2,7 @@
 
 \chapter{Full set of steady-state equations for the components of $\mathbb{C}^{s.s}$}
 \label{Appendix:SteadyStateEquations}
-\lhead{Appendix C. \emph{Full set of steady-state equations for the components of $\mathbb{C}^{s.s}$}}
+\lhead{Appendix C. \emph{Full set of steady-state equations for the components...}}
 
 Here is the full set of equations for the covariance matrix elements in the steady state.
 We use the shorthand notation $\langle ... \rangle=\langle ... \rangle^{s.s}$, i.e., all averages are
