--- a/portada.tex
+++ b/portada.tex
@@ -1,31 +1,36 @@
 \begin{titlepage}
 \thispagestyle{empty} %\vspace*{0.1cm}
-\hspace{-0.3cm}\includegraphics[scale=0.25]{ehu}\hspace{0.3cm}
+% \hspace{-0.3cm}\includegraphics[scale=0.25]{ehu}\hspace{0.3cm}
+{\centering
+\includegraphics[scale=0.25]{ehu}
+}
 \bigskip
 {\centering \large
-\par \vspace{1cm}
+\par \vspace{1.5cm}
 
-\hrule\vspace*{0.5cm}
+\hrule\vspace*{0.3cm}
 
-{\LARGE \bf {Asymmetric Quantum Devices and Heat Transport}}
+{\LARGE \bf {Asymmetric Quantum Devices\\and Heat Transport}}
 
-\vspace{0.7cm}\hrule \vspace{2.75cm}
+\vspace{0.3cm}\hrule \vspace{2cm}
 {\LARGE \bf{Miguel \'{A}ngel Sim\'{o}n Mart\'{i}nez}}\\
 \vspace{1.25cm}
 {\it{Supervisors:}} \\
 \vspace{0.1cm}
 {\large \bf {Prof. Juan Gonzalo Muga Francisco}}\\
 {\large \bf {Prof. Maria Luisa Pons Barba}}\\
-\vspace{2.2cm}
-\begin{figure}[h]
-{\centering {
-
-}\par}
-\end{figure}
-\vspace{1.0cm}
+% \vspace{2.2cm}
+\vfill
+% \begin{figure}[h]
+% {\centering {
+%
+% }\par}
+% \end{figure}
+% \vspace{1.0cm}
 Departamento de Qu\'{\i}mica-F\'{\i}sica\\
 Facultad de Ciencia y Tecnolog\'ia\\
 Universidad del Pa\'is Vasco/Euskal Herriko Unibertsitatea\\ (UPV/EHU)\\
-\vspace*{1.0cm}
-\hspace{5.5cm}Leioa, Abril 2021} \pagebreak
+\vspace{1.0cm}
+Leioa, Abril 2021\\
+} \pagebreak
 \end{titlepage}
